Added child entity of address. Now support both parent and child entity search.